# office-automation

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF.md  OAUTH_HANDOFF.md  README.md  collect_and_push.sh  collect_session_telemetry.py  config.example.yaml  deny.toml  fly.md  oa  oauth_device_client.py  occupancy_detector.py  project_leverage_collector.py  requirements.txt  roadmap.md  run.py  session_stats_parser.py  snapshot.json  start.sh  tailscale.md  test_yolink.py  vision.md
.github/: pull_request_template.md
.github/workflows/: security.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: verification-metadata.xml
docs/: continuous-presence-detection.md  tuya-local-key.md
docs/deployment/: backend-mqtt-cutover.md  dry-run-migration.md  incident-response.md  legacy-decommission.md  primary-host-launchd.md  rollback-validation.md  shadow-mode-validation.md  supply-chain.md
docs/execution/: epic24_retrospective.md
docs/ui-mockups/: presence-and-hvac-band-controls.html
docs/working/: 100_security_threat_model.md  147_renovation_mode.md  62_primary_host_modern_stack.md  erv-thrash-fix.md  history_tab.md  productivity_phase2.md  productivity_tab.md  session_telemetry_spec.md
fly-proxy/: Caddyfile  Dockerfile  README.md  fly.toml
frontend/: App.tsx  HistoricalCharts.tsx  Login.tsx  OfficeReplay.tsx  README.md  api.ts  constants.tsx  index.css  index.html  metadata.json  mockData.ts  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
frontend/components/: CO2Chart.tsx  VitalTile.tsx
frontend/public/: ICONS_TODO.md  manifest.json
rust/office-automate-server/: Cargo.toml
rust/office-automate-server/src/: artifacts.rs  auth.rs  automation.rs  cli.rs  cloudflare.rs  config.rs  db.rs  device.rs  edge.rs  erv.rs  http.rs  hvac.rs  lib.rs  main.rs  migration.rs  mqtt.rs  policy.rs  presence.rs  qingping.rs  state.rs  status.rs  telemetry.rs  validation.rs  yolink.rs
scripts/: decommission_legacy_launchd.sh  refresh-erv-key-requirements.txt  refresh-erv-key.py  sync_rollback_snapshot.sh  sync_session_history.sh  tuya-local-key.sh
scripts/launchd/: com.office-automate.collect.plist  com.office-automate.telemetry.plist
scripts/launchd/primary-host/: com.office-automate.edge.plist.template  com.office-automate.project-leverage.plist.template  com.office-automate.server.plist.template  (+2 more)
scripts/pf/: office-automate-edge-anchor.conf.template
scripts/security/: capture-incident-evidence.sh  release-provenance.sh  validate-edge-quarantine.sh
src/: __init__.py  config.py  database.py  erv_client.py  hvac_hysteresis.py  hvac_temperature_bands.py  kumo_client.py  oauth_service.py  orchestrator.py  project_names.py  qingping_client.py  state_machine.py  telemetry_db.py  yolink_client.py
tests/: test_artifact_server.py  test_away_stale_flush.py  test_collect_session_telemetry.py  test_database_settings.py  test_erv_client.py  test_erv_thrash_fix.py  test_history_database.py  test_hvac_cooling.py  test_hvac_hysteresis.py  test_hvac_temperature_bands.py  test_leverage_endpoint.py  test_manual_presence.py  test_project_leverage.py  test_refresh_erv_key.py  test_session_stats_parser.py
(+42 files in other folders)
