[package]
name = "office-automate-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart", "ws"] }
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
ipnet = "2"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rumqttd = { version = "0.20", default-features = false }
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls-no-provider"] }
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
rustuya = "0.3.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
